--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,5 +86,15 @@
         "clocale": "cpp",
         "xstring": "cpp"
     },
-    "C_Cpp.errorSquiggles": "Disabled"
+    "C_Cpp.errorSquiggles": "Disabled",
+    "explorer.excludeGitIgnore": true,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "Dependencies": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true
+    }
 }
